--- a/milestone.html
+++ b/milestone.html
@@ -93,6 +93,19 @@
           Websites may be provided for a myriad of informative, entertainment, commercial, governmental, or non-governmental reasons. </p>
 
     </div>
+    <br>
+    <br>
+
+    <div class="cat-gif">
+      <h1> You've completed the document! <h1>
+      <img src="cat-derp.gif" width="200px" height="200px"/>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h6> Click the cat for a surprise!</h6>
+    </div>
 
   </body>
 </html>
