--- a/milestone.html
+++ b/milestone.html
@@ -11,7 +11,7 @@
 
 <!-- Content Section -->
   <body>
-    <div class="section-1">
+    <div class="section-1" id="top-page">
       <h1>The Creation of ENIAC</h1>
       <span><a href="https://en.wikipedia.org/wiki/ENIAC" target="_blank"><img src="https://images.computerhistory.org/revonline/images/102618640-03-01.jpg?w=600" height="170" width="170"></a></span>
         <p> The <strong>ENIAC</strong> was developed in 1946, way ahead of it's time. It was the brain child of John Presper Eckert and John W. Mauchly.
@@ -98,13 +98,14 @@
 
     <div class="cat-gif">
       <h1> You've completed the document! <h1>
-      <img src="cat-derp.gif" width="200px" height="200px"/>
+      <a href="#top-page" target="_self"><img src="cat-derp.gif" width="200px" height="200px"/> </a>
       <br>
       <br>
       <br>
       <br>
       <br>
       <h6> Click the cat for a surprise!</h6>
+      <a href="cat-page.html" target="_self"><h6 class="link"> Or click me </h6></a>
     </div>
 
   </body>
