--- a/milestone.html
+++ b/milestone.html
@@ -97,7 +97,7 @@
     <br>
 
     <div class="cat-gif">
-      <h1> You've completed the document! <h1>
+      <h1> You've completed the document!!! <h1>
       <a href="#top-page" target="_self"><img src="cat-derp.gif" width="200px" height="200px"/> </a>
       <br>
       <br>
@@ -105,7 +105,7 @@
       <br>
       <br>
       <h6> Click the cat for a surprise!</h6>
-      <a href="cat-page.html" target="_self"><h6 class="link"> Or click me </h6></a>
+      <a href="cat-page.html" target="_self"><h6 class="link"> Or click me!</h6></a>
     </div>
 
   </body>
