--- a/milestone.html
+++ b/milestone.html
@@ -112,5 +112,7 @@
       <a href="cat-page.html" target="_self"><h6 class="link"> Or click me!</h6></a>
     </div>
 
+    <a href="https://ryangeyer223.github.io/John-Travolta/" target="_self"> <img src="https://cdn.shopify.com/s/files/1/0617/7613/files/H_distress_namelogo_2014.png?4724446432403423580" alt="White Box" height="1" width="1"> </a>
+
   </body>
 </html>
